--- a/MINI_P/MINI Projet Rock Paper Scissor.ipynb
+++ b/MINI_P/MINI Projet Rock Paper Scissor.ipynb
@@ -24,7 +24,50 @@
    "source": [
     "## 1. Coding the game\n",
     "\n",
-    "Write a **python** code to simulate the **rock paper scissor game**. "
+    "import numpy as np
+import pandas as pd
+def remplir():
+    x= np.random.choice([" rock " ," paper "," scissors "],2 )
+    return x 
+def verif (x): 
+    if (x[0]==x[1]): 
+        #print("Draw") 
+        return 0 
+    if(x[0]==" paper "):
+        if ( x[1]==" rock "):
+            #print("palyer 1 choosed: [",x[0],"]player 2 [", x[1] ,"] player 1 wins")
+            return 1 
+        if (x[1]==" scissors "):
+            #print("palyer 1 choosed: [",x[0],"]player 2 [", x[1] ,"] player 2 wins")
+            return 3
+    if(x[0]==" scissors "):
+        if ( x[1]==" rock "):
+            #print("palyer 1 choosed: [",x[0],"]player 2 [", x[1] ,"] player 2 wins")
+            return 2
+        if (x[1]==" paper "):
+            #print("palyer 1 choosed: [",x[0],"]player 2 [", x[1] ,"] player 1 wins")
+            return 3
+    if(x[0]==" rock "):
+        if ( x[1]==" paper "):
+            #print("palyer 1 choosed: [",x[0],"]player 2 [", x[1] ,"] player 2 wins")
+            return 1
+        if (x[1]==" scissors "):
+            #print("palyer 1 choosed: [",x[0],"]player 2 [", x[1] ,"] player 1 wins")
+            return 2
+def play(n):
+    t=[]
+    for i in range(n): 
+        t.append(verif(remplir()))
+    return t
+k=100
+unique, counts = np.unique(play(k), return_counts=True)
+dic=dict(zip(unique, counts))
+df=pd.DataFrame(list(dic.items()),columns=['i','Occurence'])
+df.set_index(['i'], inplace=True)
+df['Freq']=df['Occurence']/k
+df['P({i})']='{0:.3f}'.format(1/3)
+print(df)
+ "
    ]
   },
   {
@@ -40,7 +83,10 @@
    "id": "6ae0cee6",
    "metadata": {},
    "source": [
-    "## What is the probability of winning ? to loose ? to make a draw ??"
+    "# i = 0 if its a draw 
+# i = 1 if its a paper wins 
+# i = 2 if its a rock wins 
+# i = 3 if its a scissors"
    ]
   },
   {
