--- a/TP1/TP1.ipynb
+++ b/TP1/TP1.ipynb
@@ -401,7 +401,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Conclusion \n",
+    "les résultats de l expérience précédente sont des valeurs toujours
+      très proches au probabilités choisis.
+on constate que l occurence le plus élevée est de la face qui ayyant la plus
+grande probabilité et quand la probabilité dminue, le frequence diminue aussi
+cest à cause de dé truqé ( non parfait)  \n",
     "\n",
     "\n",
     "\n",
@@ -632,7 +636,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Explication \n",
+    "## Explication \n
+      on observe que le nombre d occurences sont equiprobables lorsqu on faisant la permutation
+aleatoire de l élément {1,2,3} 1000 fois.
+D où on conclue que les permutation aléatoires sont uniformes. ",
     "\n",
     "\n",
     "\n",
